# digital-footprints-analyzer

./: .env.example  Notes.txt  README.md  RUNNING.md  check_azure_openai.py  pyproject.toml  run_ui.py
.windsurf/rules/: coding-style-guide.md
reference/: ImplementationPlan.md  Notes.MD
src/dfa/: crew.py  main.py  ui_app.py
src/dfa/config/: agents.yaml  tasks.yaml
