[project]
name = "Digital Footprint Analyzer"
version = "0.1.0"
description = "Digital Footprint Analyzer using crewAI"
authors = [{ name = "Alemhar", email = "alemhar@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "gradio",
    "python-dotenv",
    "openai",
    "langchain-google-genai"
]

[project.scripts]
dfa = "dfa.main:run"
run_crew = "dfa.main:run"
train = "dfa.main:train"
replay = "dfa.main:replay"
test = "dfa.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
